--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <article class="card" role="region" aria-label="Cartão de Visita Digital">
     <header>
       <div class="profile-image">
-        <img src="../img/imagem.jpeg" alt="Rennan Medeiros" />
+        <img src="/img/imagem.jpeg" alt="Rennan Medeiros" />
       </div>
       <div class="header-info">
         <h1>Rennan Medeiros</h1>
